--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,8 @@ jobs:
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
         alias: ${{ secrets.SIGNING_ALIAS }}
         keyStorePassword: ${{ secrets.SIGNING_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: "33.0.2"
     - uses: actions/upload-artifact@v4
       with:
         name: Signed app bundle
