--- a/android-mvn/pom.xml
+++ b/android-mvn/pom.xml
@@ -267,13 +267,23 @@
 		<!-- main android plugin. select platform and build-tool version (33.0.2 is the last one supported by java 8) -->
         <groupId>com.github.msx80</groupId>
         <artifactId>android-maven-plugin</artifactId>
-		        <!--<executions>
+		        <executions>
           <execution>
-            <phase>install</phase>
+            <phase>package</phase>
             <goals>
               <goal>apk</goal>
-            </goals>-->
-        <configuration>
+			  <goal>zipalign</goal>
+            </goals>
+        </execution>
+        </executions>
+		<configuration>
+		<zipalignSkip>false</zipalignSkip>
+		<zipalign>
+			<skip>false</skip>
+			<verbose>true</verbose>
+			<inputApk>${project.build.directory}/${cartridge.artifactId}.apk</inputApk>
+			<outputApk>${project.build.directory}/${cartridge.artifactId}.apk</outputApk>
+		</zipalign>
 		  <!-- read natives from the folder we have unpacked them earlier -->
 		  <nativeLibrariesDirectory>${project.build.directory}/libgdxnatives/</nativeLibrariesDirectory>
           <sdk>
@@ -288,8 +298,7 @@
 		 <!-- use the dynamically built manifest -->
 		 <androidManifestFile>${project.build.directory}/filtered-manifest/src/main/AndroidManifest.xml.template</androidManifestFile>
         </configuration>
-		 <!--  </execution>
-        </executions> -->
+		
       </plugin>
     </plugins>
 	<finalName>${cartridge.artifactId}</finalName>
