--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,16 @@ jobs:
       with:
         name: retrodrawing.apk
         path: android-mvn/target/retrodrawing.apk 
+    - name: Build desktop
+      run: |
+        cd desktop-mvn
+        mvn --batch-mode -Dcartridge.artifactId=retrodrawing -Dcartridge.groupId=com.github.msx80.omicron -Dcartridge.version=$GITHUB_DDVER clean package
+    - name: Deploy Desktop
+      uses: actions/upload-artifact@v4
+      with:
+        name: 'retrodrawing-desktop.jar'
+        path: desktop-mvn/target/retrodrawing-desktop.jar
+
     - name: Deploy cartridge
       uses: actions/upload-artifact@v4
       with:
