--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
       run: |
         cd android-mvn
         mvn --batch-mode -Dcartridge.artifactId=retrodrawing -Dcartridge.groupId=com.github.msx80.omicron -Dcartridge.version=$GITHUB_DDVER clean package
+    - name: Install packages        
+      run: |
+        sdkmanager "build-tools;34.0.0" "platforms;android-26"        
     - uses: r0adkll/sign-android-release@v1.0.4
       name: Sign app APK
       id: sign_app
@@ -46,7 +49,7 @@ jobs:
         alias: ${{ secrets.SIGNING_ALIAS }}
         keyStorePassword: ${{ secrets.SIGNING_PASSWORD }}
       env:
-        BUILD_TOOLS_VERSION: "33.0.2"
+        BUILD_TOOLS_VERSION: "34.0.0"
     - name: Rename apk
       run: |
         rm -vf android-mvn/target/retrodrawing.apk
