--- a/android-wrapper/app/src/main/AndroidManifest.xml
+++ b/android-wrapper/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
 		<activity
             android:name="com.github.msx80.omicron.CrashActivity"
+			android:exported="false"
             android:label="Crash report" >
 		</activity>		
     </application>
