--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build android
       run: |
         cd android-wrapper
-        gradle --stacktrace -Pcartridge.artifactId=retrodrawing -Pcartridge.groupId=com.github.msx80.omicron -Pcartridge.version=$GITHUB_DDVER clean assembleRelease
+        ./gradlew --stacktrace -Pcartridge.artifactId=retrodrawing -Pcartridge.groupId=com.github.msx80.omicron -Pcartridge.version=$GITHUB_DDVER clean assembleRelease
     - uses: actions/upload-artifact@v4
       with:
         name: Unsigned retrodrawing.apk
